# flake8-numpy-random

./: LICENSE  README.md  flake8_numpy_random.py  pyproject.toml  setup.cfg  tox.ini
tests/: test_flake8_numpy_random.py
